--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="navb-logo logo">
                     <a href="index.html">
                         <div class="img-block">
-                            <img src="/assets/images/Logo.png" alt="">
+                            <img src="assets/images/Logo.png" alt="">
                         </div>
                         <div class="text-block">
                             <p>HealthTrack</p>
@@ -67,7 +67,7 @@
                     <div class="navb-logo">
                         <a href="index.html">
                             <div class="img-block">
-                                <img src="/assets/images/Logo.png" alt="">
+                                <img src="assets/images/Logo.png" alt="">
                             </div>
                             <div class="text-block">
                                 <p>HealthTrack</p>
@@ -103,7 +103,7 @@
         </div>
         <div class="section__intro-logo">
             <div class="img-cont">
-                <img src="/assets/images/intro/black-woman-jogging-with-dog-in-spring-park-healthy-lifestyle-sport-outdoor-activity-concept-illustration-free-vector-removebg.png"
+                <img src="assets/images/intro/black-woman-jogging-with-dog-in-spring-park-healthy-lifestyle-sport-outdoor-activity-concept-illustration-free-vector-removebg.png"
                     alt="">
             </div>
         </div>
@@ -117,7 +117,7 @@
             <div class="section__aboutUs-description-row">
                 <div class="section__aboutUs-description-row-item">
                     <div class="item-logo">
-                        <img src="/assets/images/about us/envelop.png" alt="">
+                        <img src="assets/images/about us/envelop.png" alt="">
                     </div>
                     <div class="item-description">
                         <p>Email marketing</p>
@@ -125,11 +125,11 @@
                     </div>
                 </div>
                 <div class="section__aboutUs-description-row-item">
-                    <img src="/assets/images/about us/diagram.png" alt="">
+                    <img src="assets/images/about us/diagram.png" alt="">
                 </div>
                 <div class="section__aboutUs-description-row-item">
                     <div class="item-logo">
-                        <img src="/assets/images/about us/wheelwindow.png" alt="">
+                        <img src="assets/images/about us/wheelwindow.png" alt="">
                     </div>
                     <div class="item-description">
                         <p>Content Marketing</p>
@@ -140,7 +140,7 @@
             <div class="section__aboutUs-description-row">
                 <div class="section__aboutUs-description-row-item">
                     <div class="item-logo">
-                        <img src="/assets/images/about us/lock.png" alt="">
+                        <img src="assets/images/about us/lock.png" alt="">
                     </div>
                     <div class="item-description">
                         <p>Top Security</p>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="section__aboutUs-description-row-item">
                     <div class="item-logo">
-                        <img src="/assets/images/about us/horn.png" alt="">
+                        <img src="assets/images/about us/horn.png" alt="">
                     </div>
                     <div class="item-description">
                         <p>Paid Campaigns</p>
@@ -158,7 +158,7 @@
                 </div>
                 <div class="section__aboutUs-description-row-item">
                     <div class="item-logo">
-                        <img src="/assets/images/about us/resumecard.png" alt="">
+                        <img src="assets/images/about us/resumecard.png" alt="">
                     </div>
                     <div class="item-description">
                         <p>Social Media Marketing</p>
@@ -204,7 +204,7 @@
 
         <div class=".section__subscripton-swiper swiper mySwiper">
             <div class="swiper-wrapper">
-                <div class="swiper-slide" style=" background-image: url(/assets/images/subscription/div.pricing-content\ \(1\).png);
+                <div class="swiper-slide" style=" background-image: url(assets/images/subscription/div.pricing-content\ \(1\).png);
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;">
@@ -226,28 +226,28 @@
                         <div class="swiper-wrapper-features">
                             <div class="block new">
                                 <div class="circle">
-                                    <img src="/assets/images/subscription/checkmark.png" alt="">
+                                    <img src="assets/images/subscription/checkmark.png" alt="">
                                 </div>
                                 <p>Heart Rate Monitoring</p>
                             </div>
 
                             <div class="block new">
                                 <div class="circle">
-                                    <img src="/assets/images/subscription/checkmark.png" alt="">
+                                    <img src="assets/images/subscription/checkmark.png" alt="">
                                 </div>
                                 <p>Steps Counter</p>
                             </div>
 
                             <div class="block new">
                                 <div class="circle">
-                                    <img src="/assets/images/subscription/checkmark.png" alt="">
+                                    <img src="assets/images/subscription/checkmark.png" alt="">
                                 </div>
                                 <p>Basic Goal Setting</p>
                             </div>
 
                             <div class="block new">
                                 <div class="circle">
-                                    <img src="/assets/images/subscription/checkmark.png" alt="">
+                                    <img src="assets/images/subscription/checkmark.png" alt="">
                                 </div>
                                 <p>Limited Ads</p>
                             </div>
@@ -264,7 +264,7 @@
                     </div>
                 </div>
 
-                <div class="swiper-slide" style=" background-image: url(/assets/images/subscription/div.pricing-content.png);
+                <div class="swiper-slide" style=" background-image: url(assets/images/subscription/div.pricing-content.png);
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;">
@@ -287,28 +287,28 @@
                         <div class="swiper-wrapper-features">
                             <div class="block new">
                                 <div class="circle">
-                                    <img src="/assets/images/subscription/checkmark.png" alt="">
+                                    <img src="assets/images/subscription/checkmark.png" alt="">
                                 </div>
                                 <p>Heart Rate Monitoring</p>
                             </div>
 
                             <div class="block new">
                                 <div class="circle">
-                                    <img src="/assets/images/subscription/checkmark.png" alt="">
+                                    <img src="assets/images/subscription/checkmark.png" alt="">
                                 </div>
                                 <p>Steps Counter</p>
                             </div>
 
                             <div class="block new">
                                 <div class="circle">
-                                    <img src="/assets/images/subscription/checkmark.png" alt="">
+                                    <img src="assets/images/subscription/checkmark.png" alt="">
                                 </div>
                                 <p>Sleep Analysis</p>
                             </div>
 
                             <div class="block new">
                                 <div class="circle">
-                                    <img src="/assets/images/subscription/checkmark.png" alt="">
+                                    <img src="assets/images/subscription/checkmark.png" alt="">
                                 </div>
                                 <p>Health Reminders</p>
                             </div>
@@ -325,7 +325,7 @@
                     </div>
                 </div>
 
-                <div class="swiper-slide" style=" background-image: url(/assets/images/subscription/div.pricing-content\ \(2\).png);
+                <div class="swiper-slide" style=" background-image: url(assets/images/subscription/div.pricing-content\ \(2\).png);
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;">
@@ -347,28 +347,28 @@
                         <div class="swiper-wrapper-features">
                             <div class="block new">
                                 <div class="circle">
-                                    <img src="/assets/images/subscription/checkmark.png" alt="">
+                                    <img src="assets/images/subscription/checkmark.png" alt="">
                                 </div>
                                 <p>All HealthTrack Pro Features</p>
                             </div>
 
                             <div class="block new">
                                 <div class="circle">
-                                    <img src="/assets/images/subscription/checkmark.png" alt="">
+                                    <img src="assets/images/subscription/checkmark.png" alt="">
                                 </div>
                                 <p>Priority Customer Support</p>
                             </div>
 
                             <div class="block new">
                                 <div class="circle">
-                                    <img src="/assets/images/subscription/checkmark.png" alt="">
+                                    <img src="assets/images/subscription/checkmark.png" alt="">
                                 </div>
                                 <p>Access to Premium Workouts and Meal Plans</p>
                             </div>
 
                             <div class="block new">
                                 <div class="circle">
-                                    <img src="/assets/images/subscription/checkmark.png" alt="">
+                                    <img src="assets/images/subscription/checkmark.png" alt="">
                                 </div>
                                 <p>Multi-Device Syncing</p>
                             </div>
@@ -393,7 +393,7 @@
     <div id="myModal" class="modal">
         <form class="modal-content" onsubmit="return formValidate(this)" name="modal-content">
             <div class="close-modal">
-                <img src="/assets/images/modal/close.png" id="close-modal" class="close-modal" alt="">
+                <img src="assets/images/modal/close.png" id="close-modal" class="close-modal" alt="">
             </div>
             <div class="modal-content-title">
                 <p>Subscribe</p>
@@ -449,7 +449,7 @@
             <div class="footer__icons__title">
                 <a href="index.html">
                     <div class="img-block">
-                        <img src="/assets/images/Logo.png" alt="">
+                        <img src="assets/images/Logo.png" alt="">
                     </div>
                     <div class="text-block">
                         <p>HealthTrack</p>
@@ -528,15 +528,15 @@
             <div class="footer__contacts">
                 <p1>Contacts</p1><br>
                 <div class="item">
-                    <img src="/assets/images/footer/mail.png" alt=""> contact@example.com<br>
+                    <img src="assets/images/footer/mail.png" alt=""> contact@example.com<br>
                 </div>
                 <div class="item">
-                    <img src="/assets/images/footer/phone.png" alt="">
+                    <img src="assets/images/footer/phone.png" alt="">
                     <p> (123) 456 - 6789</p><br>
                 </div>
 
                 <div class="item">
-                    <img src="/assets/images/footer/location.png" alt="">
+                    <img src="assets/images/footer/location.png" alt="">
                     234 Location Ave District
                 </div>
             </div>
