--- a/About us.html
+++ b/About us.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@100&display=swap"
         rel="stylesheet">
 
-    <script defer src="/js/script.js"></script>
+    <script defer src="script.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
@@ -31,7 +31,7 @@
                 <div class="navb-logo logo">
                     <a href="index.html">
                         <div class="img-block">
-                            <img src="/assets/images/Logo.png" alt="">
+                            <img src="assets/images/Logo.png" alt="">
                         </div>
                         <div class="text-block">
                             <p>HealthTrack</p>
@@ -67,7 +67,7 @@
                     <div class="navb-logo">
                         <a href="index.html">
                             <div class="img-block">
-                                <img src="/assets/images/Logo.png" alt="">
+                                <img src="assets/images/Logo.png" alt="">
                             </div>
                             <div class="text-block">
                                 <p>HealthTrack</p>
